# ml-in-prod

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: README.md  base.yaml  churn_risk.yaml  dev.yaml  invoice_fraud.yaml  late_payment.yaml  prod.yaml
deployment/azure_functions/: function_app.py
docs/concepts/: 01_ml_in_production.md  02_system_architecture.md  02a_layer_contracts.md  03_coding_standards.md  04_reproducibility.md
docs/diagrams/: system_architecture.md
scripts/: setup_env.sh  smoke_test.py
src/platform/: README.md  data_pipeline.py  monitoring_pipeline.py  retraining_pipeline.py  serving_pipeline.py  training_pipeline.py
src/platform/common/: config.py  io.py  logging.py
src/use_cases/: README.md
src/use_cases/churn_risk/: README.md  features.py  metrics.py  target.py
src/use_cases/invoice_fraud/: README.md  features.py  metrics.py  target.py
src/use_cases/late_payment/: README.md  features.py  metrics.py  target.py
